.provarCaches/00D410000011HE0EAM/objects/rstkf__apwht__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_apwht</customHelpPage>
    <description>apwht__c</description>
    <fields>
        <fullName>rstkf__apwht_assetacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>apwht_assetacct</description>
        <label>Asset Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Withholding Tax Classes (Asset Account)</relationshipLabel>
        <relationshipName>apwhts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apwht_class__c</fullName>
        <label>WHT Class</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apwht_cmpno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Withholding Tax Classes</relationshipLabel>
        <relationshipName>apwhts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apwht_deductdisc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deduct Discount Before Tax Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__apwht_desc__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apwht_glacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Liability Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Withholding Tax Classes</relationshipLabel>
        <relationshipName>Withholding_Tax_Classes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apwht_pct__c</fullName>
        <defaultValue>0</defaultValue>
        <label>WHT Percentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__apwht_cmpno__r.rstkf__externalid__c + &apos;_&apos; +  rstkf__apwht_class__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__apwht_class__c + &apos; (&apos; +   LEFT(rstkf__apwht_desc__c, 57)   + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Withholding Tax Class</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Withholding Tax Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstkf__Validate_Liability_Account</fullName>
        <active>true</active>
        <description>Company must match Liability Account&apos;s company</description>
        <errorConditionFormula>rstkf__apwht_glacct__r.rstkf__glacct_cmpno__c != null &amp;&amp; rstkf__apwht_glacct__r.rstkf__glacct_cmpno__c !=  rstkf__apwht_cmpno__c</errorConditionFormula>
        <errorMessage>Company must match Liability Account&apos;s company</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__Validate_Liability_Account_Type</fullName>
        <active>true</active>
        <description>Liability Account should be of AP Account Type Tax</description>
        <errorConditionFormula>!ISPICKVAL(rstkf__apwht_glacct__r.rstkf__glacct_apaccttype__c, &apos;Tax&apos;)</errorConditionFormula>
        <errorMessage>Liability Account should be of AP Account Type &apos;Tax&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__Validate_WHT_Percentage</fullName>
        <active>true</active>
        <description>Invalid WHT Percentage</description>
        <errorConditionFormula>rstkf__apwht_pct__c &lt; 0 || rstkf__apwht_pct__c &gt; 99.99</errorConditionFormula>
        <errorMessage>Invalid WHT Percentage</errorMessage>
    </validationRules>
</CustomObject>